# rhino-shapely-converter

./: LICENSE  README.md  pyproject.toml  requirements-test.txt
.github/workflows/: ci.yaml
src/rhino_shapely_converter/: __init__.py  convert_from_rhino_to_shapely.py  convert_from_shapely_to_rhino.py  converter.py  from_rhino_to_shapely.py  from_shapely_to_rhino.py
tests/: test_convert_from_shapely_to_rhino.py  test_converter_from_rhino_to_shapely.py
