[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rhino-shapely-converter"
version = "0.1.0"
description = "This is to convert rhino geometry to shapely geometry and vice versa"
authors = [
    { name="aa", email="aa@spacewalk.tech" }
]
dependencies = [
    "shapely>=2.0.7",
    "rhino3dm>=8.9.0"
]

[tool.setuptools]
package-dir = { "rhino_shapely_converter" = "src/rhino_shapely_converter" }
