[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rhino-shapely-converter"
version = "0.1.2"
description = "This is to convert rhino geometry to shapely geometry and vice versa"
readme = "README.md"
authors = ["aa <aa@spacewalk.tech>"]
repository = "https://github.com/TeamSPWK/rhino-shapely-converter"
include = ["src/rhino_shapely_converter"]

[tool.poetry.dependencies]
python = "^3.9"
shapely = "^2.0.7"
rhino3dm = "^8.9.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.6"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
